Add TraverseForwardTest